<resources>
    <string name="app_name">Money Keeper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_menu_operations">Операции</string>
    <string name="text_menu_wallets">Кошельки</string>
    <string name="text_menu_settings">Настройки</string>
    <string name="text_menu_other">Разное</string>
    <string name="text_menu_share">Поделиться</string>
    <string name="text_menu_about">О программе</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_menu_categories">Категории</string>
    <string name="text_menu_products">Товары</string>
    <string name="title_activity_edit_operation">EditOperationActivity</string>
    <string name="text_about_iconset">Иконки:</string>
    <string name="text_about_author">Михальченков Дмитрий\nmikhaltchenkov@gmail.com</string>
    <string name="text_about_icons_authors">Pixel Buddha (nfo@pixelbuddha.net)\n https://materialdesignicons.com</string>
    <string name="text_action_delete">Удалить</string>
    <string name="text_action_save">Сохранить</string>
    <string name="title_activity_edit_wallet">EditWalletActivity</string>
    <string name="text_currency_name">Валюта</string>
    <string name="text_wallet_type">Тип кошелька</string>
    <string name="text_wallet_name">Название</string>
    <string name="text_balance_label">Баланс</string>
</resources>
