<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_operations"
            android:icon="@drawable/ic_menu_swap_vertical"
            android:title="@string/text_menu_operations" />
        <item
            android:id="@+id/nav_wallets"
            android:icon="@drawable/ic_menu_wallet"
            android:title="@string/text_menu_wallets" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/text_menu_settings" />
    </group>

    <item android:title="@string/text_menu_other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/text_menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/text_menu_about" />
        </menu>
    </item>

</menu>
